fix width overflowed input & textarea in edit

--- a/css/administration.css
+++ b/css/administration.css
@@ -219,6 +219,9 @@ table.dataTable {
 .button{
  padding: 0.3rem 0.7rem;
 }
+input, textarea {
+ width: 100%;
+}
 @media (max-width: 767px) {
  .in-action-bar.plx5-6 {
   margin-top: 4em;
